--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Angelina - Responsive Underconstruction Landing Page</title>
+        <title>Pyramids - This website is underconstruction</title>
         <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,900,600,700' rel='stylesheet' type='text/css'>
         <link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
         <link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
             <!-- Site Header -->
             <header id="header">
                 <div id="site_logo">
-                    <h1><a href="#"><img src="images/logo.png" title='Angelina - Responsive Underconstruction Landing Page' alt=""></a></h1>
+                    <h1><a href="#"><img src="images/logo.png" title="Pyramids - We'll come soon" alt=""></a></h1>
                 </div>
             </header>
 
@@ -29,7 +29,7 @@
 
             <section class="countown_style_4 fadeOutUp" id="countdown_block">
 
-                <h3 id="site_subheading">welcome to Angelina, a creative and modern<br>coming soon template</h3>
+                <h3 id="site_subheading">welcome to Pyramids, a creative and modern<br>We'll come soon</h3>
 
                 <h4 id="countdown_label">Our Website Is Launching Soon</h4>
                 <div id="countdown"></div>
@@ -67,7 +67,7 @@
                         <div class="section_content">
                             <div class="row">
                                 <div class="col-xs-12 anims">
-                                    <p>The company (Pyramids) was founded in 1993 Specialized in the import, export and distribution of components and multiple low Voltage panels controls as well as pumps and ventilation fans of all sizes, ranging from 8 cm to 150 cm and we are Agent for Deton Fan and Weiguang also we distribute in whole Egypt.</p>
+                                    <p class="about-words">The company (Pyramids) was founded in 1993 Specialized in the import, export and distribution of components and multiple low Voltage panels controls as well as pumps and ventilation fans of all sizes, ranging from 8 cm to 150 cm and we are Agent for Deton Fan and Weiguang also we distribute in whole Egypt.</p>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             <div class="row">
                                 <div class="col-xs-6 anims">
                                     <h3>Get In Touch</h3>
-                                    <p>If you have any questions, comments or suggestions, we would love to hear from you. Please get in touch at any time and we'll get back to you within 24 hours.</p>
+                                    <p class="contact-list-words">If you have any questions, comments or suggestions, we would love to hear from you. Please get in touch at any time and we'll get back to you within 24 hours.</p>
                                     <ul id="contacts_list">
                                         <li class="anims">
                                             <span class="contacts_icon"><img src="images/contacts_icon1.png" alt=""></span>43 Nageeb Al-Rehany st. Down Town,Cairo, Egypt.									</li>
@@ -176,16 +176,16 @@
                 </div>
 
             </section>
-
-            <footer id="site_footer">
-                <ul class="social_links"><!-- 
-                    --><li><a href="#"><i class="icon-social_twitter_square"></i></a></li><!-- 
-                    --><li><a href="#"><i class="icon-social_facebook_square"></i></a></li><!-- 
-                    --><li><a href="#"><i class="icon-social_dribbble_square"></i></a></li><!-- 
-                    --><li><a href="#"><i class="icon-social_instagram_square"></i></a></li><!-- 
-                    --><li><a href="#"><i class="icon-social_pinterest_square"></i></a></li>
+                <!-- Social Media --> 
+<!--            <footer id="site_footer">
+                <ul class="social_links"> 
+                    <li><a href="#"><i class="icon-social_twitter_square"></i></a></li> 
+                    <li><a href="#"><i class="icon-social_facebook_square"></i></a></li> 
+                    <li><a href="#"><i class="icon-social_dribbble_square"></i></a></li> 
+                    <li><a href="#"><i class="icon-social_instagram_square"></i></a></li> 
+                    <li><a href="#"><i class="icon-social_pinterest_square"></i></a></li>
                 </ul>
-            </footer>
+            </footer>-->
 
         </div>
 
@@ -196,7 +196,7 @@
                     <ul id="main_menu">
                         <li class="anims"><a href="#home">Home</a></li>
                         <li class="anims"><a href="#about">About</a></li>
-                        <li class="anims"><a href="#services">Services</a></li>
+                        <!--<li class="anims"><a href="#services">Services</a></li>-->
                         <li class="anims"><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
