--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Pyramids - This website is underconstruction</title>
+        <title>Pyramids Solor - This website is underconstruction</title>
         <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,900,600,700' rel='stylesheet' type='text/css'>
         <link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
         <link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
             <!-- Site Header -->
             <header id="header">
                 <div id="site_logo">
-                    <h1><a href="#"><img src="images/logo.png" title="Pyramids - We'll come soon" alt=""></a></h1>
+                    <h1><a href="#"><img src="images/logo.png" title="Pyramids Solor - We'll come soon" alt=""></a></h1>
                 </div>
             </header>
 
@@ -29,7 +29,7 @@
 
             <section class="countown_style_4 fadeOutUp" id="countdown_block">
 
-                <h3 id="site_subheading">welcome to Pyramids, a creative and modern<br>We'll come soon</h3>
+                <h3 id="site_subheading">welcome to Pyramids Solor, a creative and modern<br>We'll come soon</h3>
 
                 <h4 id="countdown_label">Our Website Is Launching Soon</h4>
                 <div id="countdown"></div>
@@ -67,7 +67,7 @@
                         <div class="section_content">
                             <div class="row">
                                 <div class="col-xs-12 anims">
-                                    <p class="about-words">The company (Pyramids) was founded in 1993 Specialized in the import, export and distribution of components and multiple low Voltage panels controls as well as pumps and ventilation fans of all sizes, ranging from 8 cm to 150 cm and we are Agent for Deton Fan and Weiguang also we distribute in whole Egypt.</p>
+                                    <p class="about-words">The company (Pyramids Solor) was founded in 1993 Specialized in the import, export and distribution of components and multiple low Voltage panels controls as well as pumps and ventilation fans of all sizes, ranging from 8 cm to 150 cm and we are Agent for Deton Fan and Weiguang also we distribute in whole Egypt.</p>
                                 </div>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                     <div class="scroll_container">
                         <h2 class="section_title anims">Contact Us</h2>
                         <div class="section_subtitle anims">
-                            Pyramids for Importing, Exporting, and Trading Agencies.
+                            Pyramids Solor for Importing, Exporting, and Trading Agencies.
                         </div>
                         <div class="section_content">
                             <div class="row">
@@ -114,7 +114,7 @@
                                         <li class="anims">
                                             <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
                                             <a href="mailto:jobs@pyramids-co.com">jobs@pyramids-co.com</a>
-                                            &nbsp;&nbsp;if youare seeking a job at Pyramids
+                                            &nbsp;&nbsp;if youare seeking a job at Pyramids Solor
                                         </li>
                                     </ul>
                                 </div>
