--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Site Header -->
             <header id="header">
                 <div id="site_logo">
-                    <h1><a href="#"><img src="images/logo.jpg" title="Pyramids Solor - We'll come soon" alt=""></a></h1>
+                    <h1><a href="#"><img src="images/logo.png" title="Pyramids Solor - We'll come soon" alt=""></a></h1>
                 </div>
             </header>
 
