--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="section_content">
                             <div class="row">
                                 <div class="col-xs-12 anims">
-                                    <p class="about-words">The company (Pyramids Solar) was founded in 1993 Specialized in the import, export and distribution of components and multiple low Voltage panels controls as well as pumps and ventilation fans of all sizes, ranging from 8 cm to 150 cm and we are Agent for Deton Fan and Weiguang also we distribute in whole Egypt.</p>
+                                    <p class="about-words">The company (Pyramids )was founded in 1993 Specialized in the import, export and, Exporting And Trading Agencies. and Pyramids Solar is the newest company from the Native company (Pyramids).</p>
                                 </div>
                             </div>
                         </div>
@@ -93,29 +93,10 @@
                                             <span class="contacts_icon"><img src="images/contacts_icon2.png" alt=""></span>(+202) 5904302-5904304					</li>
                                         <li class="anims">
                                             <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:info@pyramids-co.com">info@pyramids-co.com</a>
-                                                for general Information about the company
+                                            <a href="mailto:info@pyramids-co.com">komar@pyramids-co.com</a>
+                                        
                                         </li>
-                                        <li class="anims">
-                                            <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:importing@pyramids-co.com">importing@pyramids-co.com</a>
-                                            &nbsp;&nbsp;for importing & exporting issues
-                                        </li>
-                                        <li class="anims">
-                                            <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:gmanager@pyramids-co.com">gmanager@pyramids-co.com</a>
-                                            &nbsp;&nbsp;general manager of the group
-                                        </li>
-                                        <li class="anims">
-                                            <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:execdirector@pyramids-co.com">execdirector@pyramids-co.com</a>
-                                            &nbsp;&nbsp;executive director of the group
-                                        </li>
-                                        <li class="anims">
-                                            <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:jobs@pyramids-co.com">jobs@pyramids-co.com</a>
-                                            &nbsp;&nbsp;if youare seeking a job at Pyramids Solar
-                                        </li>
+                         
                                     </ul>
                                 </div>
                                 <div class="col-xs-6 anims">
