--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                             <span class="contacts_icon"><img src="images/contacts_icon2.png" alt=""></span>(+202) 5904302-5904304					</li>
                                         <li class="anims">
                                             <span class="contacts_icon"><img src="images/contacts_icon3.png" alt=""></span>
-                                            <a href="mailto:info@pyramids-co.com">komar@pyramids-co.com</a>
+                                            <a href="mailto:komar@pyramids.solar">komar@pyramids.solar</a>
                                         
                                         </li>
                          
